--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -72,8 +72,6 @@
 \cleardoublepage
 \cleardoublepage\include{FrontBackmatter/MITAbstract}
 \cleardoublepage\include{FrontBackmatter/MITReader}
-
-
 \cleardoublepage\include{FrontBackmatter/Acknowledgments}
 \pagestyle{scrheadings}
 \cleardoublepage\include{FrontBackmatter/Contents}
@@ -89,13 +87,14 @@
 
 \cleardoublepage
 
-% CHANGE THIS - palash
 \include{Chapters/chap_intro}
-
-%\include{Chapters/chap_background}
-%\include{Chapters/chap_lightbug}
-
-
+\include{Chapters/chap_background}
+\include{Chapters/chap_anatomy}
+\include{Chapters/chap_design}
+\include{Chapters/chap_impl}
+\include{Chapters/chap_eval}
+\include{Chapters/chap_conclusion}
+\include{Chapters/chap_intro_ref}
 
 \newpage\null\newpage
 
