--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -10,7 +10,11 @@
 
 \chapter*{Abstract}
 
-Robots are moving from factories to people's homes taking on the roles of artificial pets, tutors and companions. If we are to have emotionally engaging robots, we must understand how we can design robots that people feel empathy towards. In this work, I explore one design criteria for such robots: implicit life stories or the ability for a robot to experience the world we share, be transformed by that experience and communicate that experience to us. Through the construction of novel robots that can have implicit life-stories, and through human subject studies I show that such robots can evoke empathy. I also show that empathy for robots can impact empathy for other human beings. 
+Collaborations between Makers and Nonprofits are unique. They give makers an opportunity to practice their skills, understand their value and have a real world impact. In turn, Nonprofits gain different perspectives on their challenges and get to collaborate towards solutions that otherwise may not be in their reach. 
+
+These collaborations also pose unique challenges. Nonprofits with fewer resources, monetary or human, will often have difficulties defining their problems, not to mention specifying a solution. They do, however, have a compelling story to tell, the story of their mission, their processes and their constraints. Makers, with their unique cross-discipline skill set can extract challenges, problems and solutions from these stories.
+
+This thesis outlines this process of story-centric brainstorming and collaboration, and presents a web application, \textit{This is How}, in which stories are represented as videos, enriched with timeline based discussion and collaborative pads.  
 
 \endgroup			
 
