--- a/FrontBackmatter/MITAbstract.tex
+++ b/FrontBackmatter/MITAbstract.tex
@@ -27,12 +27,12 @@
 \bigskip
 \spacedallcaps{Abstract}\\ \medskip
 
-Robots are moving from factories to people's homes taking on the roles of artificial pets, tutors and companions. If we are to have emotionally engaging robots, we must understand how we can design robots that people feel empathy towards. In this work, I explore one design criteria for such robots: implicit life stories or the ability for a robot to experience the world we share, be transformed by that experience and communicate that experience to us. Through the construction of novel robots that can have implicit life-stories, and through human subject studies I show that such robots can evoke empathy. I also show that empathy for robots can impact empathy for other human beings. \\ \bigskip
-
+Almost two hundred years into the industrial revolution, the ability to develop dedicated
+machines has increased the efficiency of businesses around the world. However, for many small businesses the concept of custom machinery for their own unique requirements is still foreign. At the same time, the maker movement is seeing explosive growth. There are currently thousands of active makerspaces in the world and that number increases on a month to month basis. These makerspaces facilitate creative minds and allow the creation of internet connected devices, 3d printed prosthetics and much more. How can we harness the power of the maker revolution to help small community businesses? One of the issues in doing so is that these businesses are not aware of the full breadth of engineering possibilities available and do not know how to articulate their needs. However, they can often tell a compelling story about their operation. I propose a web platform, This is How, in which small businesses share their stories in the form of video bytes in which they explain what they do and why, what are their requirements and constraints and what kind of issues they have. Makers can then annotate the video, ask further questions and propose solutions for issues.
 \vfill
 
 Thesis Supervisor:\\
-Professor Cynthia Breazeal\\
+Professor Andrew Lippman\\
 Associate Professor of Media Arts and Sciences\\
 Program in Media Arts and Sciences
 
