--- a/FrontBackmatter/MITReader.tex
+++ b/FrontBackmatter/MITReader.tex
@@ -31,16 +31,13 @@
  
 
         Thesis Reader:\\
-        Edith Ackermann\\
-        Professor of Developmental Psychology\\
-        University of Aix-Marseille\\
-        Research Affiliate\\
-        MIT School of Architecture\\
+        Ethan Zuckerman\\
+        Professor of Media Arts and Science\\
+        MIT Media Lab\\
         \\ \bigskip
 
         Thesis Reader:\\
-        Tod Machover\\
-        Muriel R. Cooper Professor of Music and Media\\
+        J. Philipp Schmidt\\
         MIT Media Lab\\         
 
         
