--- a/FrontBackmatter/MITTitlePage.tex
+++ b/FrontBackmatter/MITTitlePage.tex
@@ -23,7 +23,7 @@
 
         \vfill        
 
-        {\small B.S. in Computer Science, Stanford University, 2003 } \\ \medskip
+        {\small B.Sc. in Computer Science Engineering, The Hebrew University in Jerusalem, 2011 } \\ \medskip
 
         {
             Submitted to the Program in Media Arts and Sciences, 
@@ -32,7 +32,7 @@
             Massachusetts Institute of\\ Technology. 
         }\\ \medskip
 
-        \spacedlowsmallcaps{June 2016} \\ \medskip
+        \spacedlowsmallcaps{August 2016} \\ \medskip
 
         \textcopyright\ Massachusetts Institute of Technology 2016. All rights reserved. \\ 
 
@@ -45,25 +45,14 @@
         \myTime \\ \bigskip
 
         Certified by:\\
-        Cynthia Breazeal\\
+        Andrew Lippman\\
         Associate Professor of Media Arts and Sciences\\
         Thesis Supervisor\\ \bigskip
 
         Accepted by:\\
         Pattie Maes \\
         Academic Head\\
-        Program in Media Arts and Sciences\\         
-
-        
-
-
-        
-        %\myDegree \\
-        %\myDepartment \\                            
-        %\myFaculty \\
-        %\myUni \\ \bigskip
-
-
+        Program in Media Arts and Sciences\\
 
 
 
