--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -42,10 +42,10 @@
 % ****************************************************************************************************
 
 % CHANGE THIS - palash
-\newcommand{\myTitle}{On Electric Owls\xspace}
-\newcommand{\mySubtitle}{Implicit life-stories of robots and their impact on human empathy\xspace}
-\newcommand{\myName}{Palash Nandy\xspace}
-\newcommand{\myTime}{May 6, 2016\xspace}
+\newcommand{\myTitle}{This is How\xspace}
+\newcommand{\mySubtitle}{Story-Centric Distributed Brainstorming and Collaboration\xspace}
+\newcommand{\myName}{Tomer Weller\xspace}
+\newcommand{\myTime}{August 6, 2016\xspace}
 
 
 %\newcommand{\myVersion}{version 4.2\xspace}
@@ -88,6 +88,10 @@
     natbib=true % natbib compatibility mode (\citep and \citet still work)
 }{biblatex}
     \usepackage{biblatex}
+
+\makeatletter
+\def\blx@maxline{77}
+\makeatother
 
 \PassOptionsToPackage{fleqn}{amsmath}       % math environments and more by the AMS 
     \usepackage{amsmath}
