--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,21 @@
+@misc{abrahamsson2002agile,
+  title={Agile software development methods: Review and analysis},
+  author={Abrahamsson, Pekka and Salo, Outi and Ronkainen, Jussi and Warsta, Juhani},
+  year={2002},
+  publisher={VTT Finland}
+}
+
+@article{sauermann2015crowd,
+  title={Crowd science user contribution patterns and their implications},
+  author={Sauermann, Henry and Franzoni, Chiara},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={3},
+  pages={679--684},
+  year={2015},
+  publisher={National Acad Sciences}
+}
+
 @article{gershenfeld2012make,
   title={How to make almost anything: The digital fabrication revolution},
   author={Gershenfeld, Neil},
@@ -65,13 +83,16 @@
   year={2002}
 }
 
+@article{projexpress,
+  title={PLACEHOLDER - PROJECT EXPRESS}
+}
+
 @misc{quirky,
   author = {},
   title = {Quirky: The Invention Platform},
   howpublished = {\url{https://www.quirky.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
 }
 
 @misc{openideo,
@@ -80,7 +101,6 @@
   howpublished = {\url{https://openideo.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
 }
 
 @article{howe2006rise,
@@ -129,13 +149,20 @@
   organization={MIT ARPA}
 }
 
+@article{brondmo1990creating,
+  title={Creating and viewing the Elastic Charles-a hypermedia journal},
+  author={Brondmo, Hans Peter and Davenport, Glorianna},
+  journal={Hypertext, State of the Art},
+  year={1990},
+  publisher={Intellect Ltd}
+}
+
 @misc{mturk,
   author = {Amazon},
   title = {Amazon Mechanical Turk},
   howpublished = {\url{https://www.mturk.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 07/20/2016)}
 }
 
 @misc{ushahidi,
@@ -144,7 +171,6 @@
   howpublished = {\url{https://www.ushahidi.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 07/20/2016)}
 }
 
 @misc{innocentive,
@@ -153,7 +179,6 @@
   howpublished = {\url{https://www.innocentive.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 07/21/2016)}
 }
 
 
@@ -163,7 +188,6 @@
   howpublished = {\url{https://interlude.fm/}},
   month = {},
   year = {},
-  note = {(Accessed on 07/21/2016)}
 }
 
 @misc{youtube,
@@ -172,7 +196,6 @@
   howpublished = {\url{https://www.youtube.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 07/21/2016)}
 }
 
 @inproceedings{d2016feminist,
@@ -190,7 +213,14 @@
   howpublished = {\url{http://stackoverflow.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
+}
+
+@misc{aws,
+  author = {},
+  title = {Amazon Web Services (AWS) - Cloud Computing Services},
+  howpublished = {\url{https://aws.amazon.com/}},
+  month = {},
+  year = {},
 }
 
 @misc{github,
@@ -199,7 +229,6 @@
   howpublished = {\url{https://github.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
 }
 
 @misc{makersbynumbers,
@@ -208,7 +237,6 @@
   howpublished = {\url{http://www.popsci.com/rise-makerspace-by-numbers}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
 }
 
 @misc{thingverse,
@@ -217,7 +245,6 @@
   howpublished = {\url{http://www.thingiverse.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
 }
 
 @misc{hackaday,
@@ -226,7 +253,6 @@
   howpublished = {\url{http://hackaday.com/}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
 }
 
 @misc{amazonvideo,
@@ -235,7 +261,6 @@
   howpublished = {\url{https://www.amazon.com/Amazon-Video/b/ref=topnav_storetab_atv?_encoding=UTF8&node=2858778011}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
 }
 
 @misc{mmne,
@@ -244,5 +269,37 @@
   howpublished = {\url{http://milkbankne.org/}},
   month = {},
   year = {},
-  note = {(Accessed on 08/03/2016)}
 }
+
+@misc{setc,
+  author = {},
+  title = {South End Technology Center},
+  howpublished = {\url{http://southendtechcenter.org/}},
+  month = {},
+  year = {},
+}
+
+@misc{pier9,
+  author = {},
+  title = {Creative Workshops | Pier 9 San Francisco | Autodesk},
+  howpublished = {\url{http://www.autodesk.com/pier-9}},
+  month = {},
+  year = {},
+}
+
+@misc{hackforwestmass,
+  author = {},
+  title = {Hack for Western Mass},
+  howpublished = {\url{http://hackforwesternmass.org/}},
+  month = {},
+  year = {},
+}
+
+@misc{galaxyzoo,
+  author = {},
+  title = {Galaxy Zoo},
+  howpublished = {\url{https://www.galaxyzoo.org/}},
+  month = {},
+  year = {},
+}
+
