--- a/FrontBackmatter/MITAbstract.tex
+++ b/FrontBackmatter/MITAbstract.tex
@@ -27,9 +27,9 @@
 \bigskip
 \spacedallcaps{Abstract}\\ \medskip
 
-Almost two hundred years into the industrial revolution, the ability to develop dedicated
-machines has increased the efficiency of businesses around the world. However, for many small businesses the concept of custom machinery for their own unique requirements is still foreign. At the same time, the maker movement is seeing explosive growth. There are currently thousands of active makerspaces in the world and that number increases on a month to month basis. These makerspaces facilitate creative minds and allow the creation of internet connected devices, 3d printed prosthetics and much more. How can we harness the power of the maker revolution to help small community businesses? One of the issues in doing so is that these businesses are not aware of the full breadth of engineering possibilities available and do not know how to articulate their needs. However, they can often tell a compelling story about their operation. I propose a web platform, This is How, in which small businesses share their stories in the form of video bytes in which they explain what they do and why, what are their requirements and constraints and what kind of issues they have. Makers can then annotate the video, ask further questions and propose solutions for issues.
+Collaborations between Makers and Nonprofits are unique. They give makers an opportunity to practice their skills, understand their value and have a real world impact. In turn, Nonprofits gain different perspectives on their challenges and get to collaborate towards solutions that otherwise may not be in their reach. These collaborations also pose unique challenges. Nonprofits with fewer resources will often have difficulties defining their problems, not to mention specifying a solution. They do, however, have a compelling story to tell, the story of their mission, their processes and their constraints. Makers, with their unique cross-discipline skill set can extract challenges, problems and solutions from these stories. This thesis outlines this process of story-centric brainstorming and collaboration, and presents a web application, \textit{This is How}, in which stories are represented as videos, enriched with timeline based discussion and collaborative pads.  
 \vfill
+
 
 Thesis Supervisor:\\
 Professor Andrew Lippman\\
