--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -303,3 +303,11 @@
   year = {},
 }
 
+@misc{youtubestats,
+  author = {},
+  title = {500 Hours of Video Uploaded To YouTube Every Minute},
+  howpublished = {\url{http://tubularinsights.com/hours-minute-uploaded-youtube/}},
+  month = {},
+  year = {},
+}
+
