--- a/FrontBackmatter/MITReader.tex
+++ b/FrontBackmatter/MITReader.tex
@@ -33,15 +33,13 @@
         Thesis Reader:\\
         Ethan Zuckerman\\
         Professor of Media Arts and Science\\
-        MIT Media Lab\\
+        Director of the MIT Center for Civc Media\\
         \\ \bigskip
 
         Thesis Reader:\\
         J. Philipp Schmidt\\
-        MIT Media Lab\\         
-
-        
-
+        Director of Learning Innovation\\
+        MIT Media Lab\\    
 
         
         %\myDegree \\
