(almost) final draft

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -311,3 +311,90 @@
   year = {},
 }
 
+@misc{gdocs,
+  author = {},
+  title = {Google Docs},
+  howpublished = {\url{https://docs.google.com}},
+  month = {},
+  year = {},
+}
+
+@misc{etherpad,
+author = {},
+  title = {Etherpad},
+  howpublished = {\url{http://etherpad.org/}},
+  month = {},
+  year = {},
+}
+
+@misc{wave,
+  author = {},
+  title = {Apache Wave - Welcome to Apache Wave (incubating)},
+  howpublished = {\url{https://incubator.apache.org/wave/}},
+  month = {},
+  year = {},
+}
+
+@misc{git,
+  author = {},
+  title = {Git - distributed version control},
+  howpublished = {\url{https://git-scm.com/}},
+  month = {},
+  year = {},
+}
+
+@misc{soundcloud,
+  author = {},
+  title = {SoundCloud},
+  howpublished = {\url{https://soundcloud.com/stream}},
+  month = {},
+  year = {},
+}
+
+@misc{reactjs,
+  author = {},
+  title = {A JavaScript library for building user interfaces | React},
+  howpublished = {\url{https://facebook.github.io/react/}},
+  month = {},
+  year = {},
+}
+
+@misc{webpack,
+  author = {},
+  title = {webpack module bundler},
+  howpublished = {\url{https://webpack.github.io/}},
+  month = {},
+  year = {},
+}
+
+@misc{npm,
+  author = {},
+  title = {npm},
+  howpublished = {\url{https://www.npmjs.com/}},
+  month = {},
+  year = {},
+}
+
+@misc{quora,
+  author = {},
+  title = {Quora},
+  howpublished = {\url{https://www.quora.com/}},
+  month = {},
+  year = {},
+}
+
+@misc{couchdb,
+  author = {},
+  title = {Apache CouchDB},
+  howpublished = {\url{http://couchdb.apache.org/}},
+  month = {},
+  year = {},
+}
+
+@misc{vp8,
+  author = {},
+  title = {VP8 - RFC 6386},
+  howpublished = {\url{https://datatracker.ietf.org/doc/rfc6386/}},
+  month = {},
+  year = {},
+}
