--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -94,7 +94,7 @@
 \include{Chapters/chap_impl}
 \include{Chapters/chap_eval}
 \include{Chapters/chap_conclusion}
-\include{Chapters/chap_intro_ref}
+% \include{Chapters/chap_intro_ref}
 
 \newpage\null\newpage
 
