--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -41,9 +41,8 @@
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
 
-% CHANGE THIS - palash
 \newcommand{\myTitle}{This is How\xspace}
-\newcommand{\mySubtitle}{Story-Centric Distributed Brainstorming and Collaboration\xspace}
+\newcommand{\mySubtitle}{Story centric Distributed Brainstorming and Collaboration\xspace}
 \newcommand{\myName}{Tomer Weller\xspace}
 \newcommand{\myTime}{August 6, 2016\xspace}
 
