--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -398,3 +398,22 @@ author = {},
   month = {},
   year = {},
 }
+
+@article{jain1994metadata,
+  title={Metadata in video databases},
+  author={Jain, Ramesh and Hampapur, Arun},
+  journal={ACM Sigmod Record},
+  volume={23},
+  number={4},
+  pages={27--33},
+  year={1994},
+  publisher={ACM}
+}
+
+@misc{catool,
+  author = {},
+  title = {CATool - The Collaborative Annotation Tool},
+  howpublished = {\url{http://harvard-atg.github.io/Catool/}},
+  month = {},
+  year = {},
+}
