--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -9,4 +9,18 @@
 
 \bigskip
 
-<TODO>
+<TBD>
+
+% I would like to to thank my advisor, Andy ``we did that back in the 80's'' Lippman, for giving me guidance, support and the freedom to explore. Andy's life long experience, crazy ideas and endless supply of quotes from Mel Brooks movies have taught me critical thinking that will remain with me wherever I go.
+
+% I thank Ethan Zuckerman and Philipp Schmidt, my thesis readers, for helping me turn a random stream of thoughts into a (mostly) coherent document. I could not have done this without you.
+
+% This thesis would not have made sense without the cooperation of the nonprofits I worked with. Naomi, Julia and Deb: thanks for helping me put things in perspective, providing a compass and reminding me about life beyond the lab.
+
+% To the Viral family: thanks for the support, advice, and, most of all, solidarity. Travis, Thariq, Savannah and Ariel: thanks for providing me a comfort space to nap, procrastinate and discuss programming philosophy. Vivian, Amir, Jasmin and Brian: Thank you for making an office feel like home, for sharing everything and accepting my peculiar taste in music. And of course, thank you Deborah Widener for caring and making sure we have everything we need to survive.
+
+% Thank you my friends at the Media Lab, the intersection of academia, a playground and an insane asylum, for helping me make sense of this craziness. Palash, Jonathan and Chikara: thanks for being there for the good times and the bad, I could not imagine these two years without you. Thank you Tal Achituv for providing support and guidance regardless of the time of day or your availability. 
+
+% Thank you Keira and Linda for being patient, yet firm, and making sure that I actually leave MIT with a degree. 
+
+% Finally, I would like to thank my parents, family and friends back in Israel for being patient and providing constant love and support from half way across the world. 
