--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -425,3 +425,15 @@ author = {},
   month = {},
   year = {},
 }
+
+@article {lewandowski,
+  author = {Lewandowski, Adam J. and Lamata, Pablo and Francis, Jane M. and Piechnik, Stefan K. and Ferreira, Vanessa M. and Boardman, Henry and Neubauer, Stefan and Singhal, Atul and Leeson, Paul and Lucas, Alan},
+  title = {Breast Milk Consumption in Preterm Neonates and Cardiac Shape in Adulthood},
+  year = {2016},
+  doi = {10.1542/peds.2016-0050},
+  publisher = {American Academy of Pediatrics},
+  issn = {0031-4005},
+  URL = {http://pediatrics.aappublications.org/content/early/2016/06/12/peds.2016-0050},
+  eprint = {http://pediatrics.aappublications.org/content/early/2016/06/12/peds.2016-0050.full.pdf},
+  journal = {Pediatrics}
+}
