--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -55,6 +55,7 @@
 % ********************************************************************
 % GO!GO!GO! MOVE IT!
 %*******************************************************
+\usepackage{listings}
 \begin{document}
 \frenchspacing
 \raggedbottom
