improve sglue appendix

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -461,3 +461,11 @@ author = {},
   month = {},
   year = {},
 }
+
+@misc{mongodb,
+  author = {},
+  title = {MongoDB - a documented oriented database},
+  howpublished = {\url{https://www.mongodb.com/}},
+  month = {},
+  year = {},
+}
