--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -156,6 +156,47 @@
     belowcaptionskip=.75\baselineskip
     %frame=L
 } 
+\lstdefinelanguage{json}
+{
+    morestring=[b]",
+    morestring=[d]'
+}
+
+\lstdefinelanguage{JavaScript}{
+  keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break},
+  keywordstyle=\color{Blue}\bfseries,
+  ndkeywords={class, export, boolean, throw, implements, import, this},
+  ndkeywordstyle=\color{Gray}\bfseries,
+  % Darkgray
+  identifierstyle=\color{Black},
+  sensitive=false,
+  comment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  commentstyle=\color{Purple}\ttfamily,
+  stringstyle=\color{Red}\ttfamily,
+  morestring=[b]',
+  morestring=[b]"
+}
+
+\lstset{
+   language=JavaScript,
+   backgroundcolor=\color{White},
+   % Lightgray
+   extendedchars=true,
+   basicstyle=\footnotesize\ttfamily,
+   showstringspaces=false,
+   showspaces=false,
+   numbers=left,
+   numberstyle=\footnotesize,
+   numbersep=9pt,
+   tabsize=2,
+   breaklines=true,
+   showtabs=false,
+   captionpos=b
+}
+
+
+
 % ****************************************************************************************************             
 
 
