getting ready to print

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,11 @@
+@misc{prusai3,
+  author = {},
+  title = {Prusa i3 - RepRapWiki},
+  howpublished = {\url{http://reprap.org/wiki/Prusa_i3}},
+  month = {},
+  year = {},
+}
+
 @misc{abrahamsson2002agile,
   title={Agile software development methods: Review and analysis},
   author={Abrahamsson, Pekka and Salo, Outi and Ronkainen, Jussi and Warsta, Juhani},
@@ -158,7 +166,7 @@
 }
 
 @misc{mturk,
-  author = {Amazon},
+  author = {},
   title = {Amazon Mechanical Turk},
   howpublished = {\url{https://www.mturk.com/}},
   month = {},
@@ -466,6 +474,14 @@ author = {},
   author = {},
   title = {MongoDB - a documented oriented database},
   howpublished = {\url{https://www.mongodb.com/}},
+  month = {},
+  year = {},
+}
+
+@misc{robohand,
+  author = {},
+  title = {Robohand » Customised, Fitted, Mechanical Fingers and Hands},
+  howpublished = {\url{http://www.robohand.net/}},
   month = {},
   year = {},
 }
