--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -57,6 +57,7 @@
 %*******************************************************
 \usepackage{listings}
 \begin{document}
+\sloppy
 \frenchspacing
 \raggedbottom
 \selectlanguage{american} % american ngerman
