--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -485,3 +485,11 @@ author = {},
   month = {},
   year = {},
 }
+
+@article{superglue,
+  title={Superglue},
+  author={Tomer Weller, Andrew Lippman},
+  year={2016},
+  note={version: 57a22ca05a4037b8e01ad4eb},
+  publisher={PubPub},
+}
