--- a/FrontBackmatter/MITReader.tex
+++ b/FrontBackmatter/MITReader.tex
@@ -32,7 +32,7 @@
 
         Thesis Reader:\\
         Ethan Zuckerman\\
-        Professor of Media Arts and Science\\
+        Professor of Media Arts and Sciences\\
         Director of the MIT Center for Civc Media\\
         \\ \bigskip
 
