--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -91,8 +91,12 @@
   year={2002}
 }
 
-@article{projexpress,
-  title={PLACEHOLDER - PROJECT EXPRESS}
+@mastersthesis{projexpress,
+  title={Computer Mediated Expression in Paint},
+  author={Achituv, Tal},
+  school={Massachusetts Institute of Technology},
+  year=2016,
+  month=6,
 }
 
 @misc{quirky,
@@ -472,7 +476,7 @@ author = {},
 
 @misc{mongodb,
   author = {},
-  title = {MongoDB - a documented oriented database},
+  title = {MongoDB - a document oriented database},
   howpublished = {\url{https://www.mongodb.com/}},
   month = {},
   year = {},
